--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,6 @@
   </div>
 </nav>
 
-<!------------------------------------------------------------------------------------------------------------>
-
-
-<!------------------------------------------------------------------------------------------------------------>
 <!-- send messege -->
 
 <section class="contact-section">
@@ -81,7 +77,7 @@
     <div class="contact-box reveal delay-1">
       <i class="fa-solid fa-envelope contact-icon"></i>
       <h3>Email</h3>
-      <p>imammul@email.com</p>
+      <p>imammularif@gmail.com</p>
     </div>
 
     <!-- PHONE -->
@@ -104,9 +100,19 @@
       <h3>Social Media</h3>
 
       <div class="social-icons">
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/imammularif" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-github"></i>
+        </a>
+
+        <a href="https://www.instagram.com/imammularf/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-instagram"></i>
+        </a>
+
+        <a href="https://www.linkedin.com/in/imammularif/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-linkedin"></i>
+        </a>
+
+
       </div>
     </div>
   </div>
