--- a/mini_project.html
+++ b/mini_project.html
@@ -72,7 +72,7 @@
       <div class="project-content">
         <h2>My-Portofolio-Website</h2>
         <p>
-          Web Development Portofolio Pribadi Berbasis Web (DEMO) Yang Berisi Tentang Profil, Skill, Peoject, Dan Kontact Saya.
+          Web Development Portofolio Pribadi Berbasis Web (DEMO)
         </p>
 
         <span class="project-tech">HTML • CSS • JavaScript • JDN</span>
@@ -83,7 +83,7 @@
              target="_blank">
             View Project →
           </a>
-          <a href="https://github.com/imammularif/My-Portofolio-Website"
+          <a href="https://github.com/imammularif/My-Portofolio"
              class="project-link secondary"
              target="_blank">
             GitHub →
