--- a/mini_project.html
+++ b/mini_project.html
@@ -104,7 +104,7 @@
       <div class="project-content">
         <h2>WEBSITE PENILAIAN SISWA SMK N 1 GODEAN</h2>
         <p>
-          Sistem Informasi Berbasis WEB Siswa Untuk Penilaian Secara Digital Dari Guru menggunakan Username Dan Password Yang dimiliki masing-masing.
+          Sistem Informasi Berbasis WEB Siswa Untuk Penilaian siswa dari konnfesional ke digital
         </p>
 
         <span class="project-tech">MySQL • XAMPP • PHP • HTML • CSS • Databases • Kerja Praktek</span>
@@ -199,8 +199,7 @@
       <div class="project-content">
         <h2>DOCUMENTASI UBUNTU POSTGRESQL</h2>
         <p>
-          Repositori ini berisi dokumentasi lengkap seputar instalasi, konfigurasi, dan manajemen PostgreSQL di sistem operasi Ubuntu.
-          Setiap folder mewakili topik berbeda — mulai dari setup awal, pengelolaan user & privilege, hingga praktik CRUD dan backup-restore database
+          Instalasi, konfigurasi, dan manajemen PostgreSQL di Ubuntu
         </p>
 
         <span class="project-tech">PostgreSQL • Linux • CLI</span>
@@ -227,11 +226,10 @@
       <div class="project-content">
         <h2>Basic SQL</h2>
         <p>
-          Repositori ini dibuat untuk mempelajari dan mempraktikkan perintah dasar SQL.
-          Tujuannya adalah untuk memahami dan menerapkan operasi SQL umum seperti CREATE, INSERT, SELECT, dan kueri sederhana untuk analisis data.
+          Perintah dasar SQL serta menerapkan operasi umum seperti CREATE, INSERT, SELECT, dan kueri sederhana
         </p>
 
-        <span class="project-tech">SQL • DBeaver • MySQL</span>
+        <span class="project-tech">SQL • DBeaver • MySQL • Data Analysis</span>
 
         <div class="project-links">
           <a href="https://github.com/imammularif/Basic-SQL"
@@ -255,8 +253,7 @@
       <div class="project-content">
         <h2>Most popular 1000 Youtube videos</h2>
         <p>
-          Repositori ini berisi analisis komprehensif dari 1000 video YouTube terpopuler secara global.
-          Tujuan dari proyek ini adalah untuk memahami tren dalam kategori video, metrik keterlibatan, dan preferensi pemirsa global.
+          Visualisasi data yang berisi analisis 1000 video YouTube terpopuler pada tahun 2024
         </p>
 
         <span class="project-tech">Visualisasi • LookerStudio • SQL</span>
@@ -295,9 +292,9 @@
       </div>
 
       <div class="project-content">
-        <h2>Implementasi Sistem Smart Absensi Wajah Menggunakan Metode Local Binary Patterns Histogram (LBPH)</h2>
+        <h2>Sistem Smart Absensi Wajah Menggunakan Metode LBPH</h2>
         <p>
-         Dalam perancangan dan pembuatan alat ini, bertujuan untuk membangun dan mengimplementasikan pengenalan wajah/Deteksi wajah dan Smart absensi dengan memanfaatkan kamera pada komputer menggunakan metode Algoritma Local Binary Pattern Histogram (LBPH) menggunakan bahasa pemrograman Python.
+          Sistem deteksi wajah untuk smart absensi menggunakan kamera komputer dengan algoritma LBPH berbasis Python.
         </p>
 
         <span class="project-tech">Python • Tugas Akhir</span>
