--- a/index.html
+++ b/index.html
@@ -524,14 +524,14 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
     <div class="contact-box reveal delay-1">
       <i class="fa-solid fa-envelope contact-icon"></i>
       <h3>Email</h3>
-      <p>imammularif@gmail.com</p>
+      <p>Uchiha@mail.com</p>
     </div>
 
     <!-- PHONE -->
     <div class="contact-box reveal delay-2">
       <i class="fa-solid fa-phone contact-icon"></i>
       <h3>Phone</h3>
-      <p>+62 081-2386-4694</p>
+      <p>+62 123-1234-123</p>
     </div>
 
     <!-- LOCATION -->
