--- a/index.html
+++ b/index.html
@@ -133,16 +133,15 @@
   </div>
 </div>
 
-<!-- <div class="skill">
+<div class="skill">
   <div class="skill-info">
     <span>SQL Query</span>
     <span class="percent">85%</span>
   </div>
   <div class="bar">
     <div class="fill" data-percent="85"></div>
-
   </div>
-</div> -->
+</div>
 
 <div class="skill">
   <div class="skill-info">
