--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
   </div>
 </div>
-
+<!-- 
 <div class="skill">
   <div class="skill-info">
     <span>Python Language</span>
@@ -172,7 +172,7 @@
   <div class="bar">
     <div class="fill" data-percent="75"></div>
   </div>
-</div>
+</div> -->
 
 
 <!-- other skills -->
