--- a/certificate.html
+++ b/certificate.html
@@ -137,6 +137,30 @@
 
 <script src="script.js"></script>
 
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  const revealElements = document.querySelectorAll('.certificate-card, .certificate-year');
+
+  function revealOnScroll() {
+    const windowHeight = window.innerHeight;
+    const revealPoint = 150;
+
+    revealElements.forEach(el => {
+      const elTop = el.getBoundingClientRect().top;
+
+      if (elTop < windowHeight - revealPoint) {
+        el.classList.add('active');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', revealOnScroll);
+  window.addEventListener('load', revealOnScroll);
+});
+
+
+</script>
+
 
 
 </body>
