--- a/certificate.html
+++ b/certificate.html
@@ -25,7 +25,7 @@
     <a href="cv.html">Download CV</a>
 
     <!-- DROPDOWN -->
-    <div class="dropdown active-parent">
+    <div class="dropdown">
       <button class="dropbtn" id="portfolioBtn" type="button">
         Portofolio
         <span class="arrow"></span>
@@ -159,6 +159,9 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
 </script>
+
+
+
 
 
 
