--- a/mini_project.html
+++ b/mini_project.html
@@ -205,7 +205,7 @@
           Instalasi, konfigurasi, dan manajemen PostgreSQL di Ubuntu
         </p>
 
-        <span class="project-tech">PostgreSQL • Linux • CLI</span>
+        <span class="project-tech">PostgreSQL • Linux • DataManagement • ManagementAccessControl</span>
 
         <div class="project-links">
           <a href="https://github.com/imammularif/DOCUMENTASI-UBUNTU-POSTGRESQL"
@@ -232,7 +232,7 @@
           Perintah dasar SQL serta menerapkan operasi umum seperti CREATE, INSERT, SELECT, dan kueri sederhana
         </p>
 
-        <span class="project-tech">SQL • DBeaver • MySQL • Data Analysis</span>
+        <span class="project-tech">SQL • DBeaver • MySQL • DataAnalysis</span>
 
         <div class="project-links">
           <a href="https://github.com/imammularif/Basic-SQL"
@@ -324,7 +324,7 @@
       <div class="project-content">
         <h2>DATA SCIENCE WITH PYTHON</h2>
         <p>
-          -
+          Mengolah dan menganalisis data untuk mendapatkan wawasan, mendukung keputusan bisnis, dan membuat aplikasi AI/ML.
         </p>
 
         <span class="project-tech">Python • Google Colabs</span>
