add header & fix layout

--- a/index.html
+++ b/index.html
@@ -449,6 +449,15 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
   <a href="certificate.html" class="btn-primary">View All Sertificate</a>
 </div>
 
+
+<!------------------------------------------------------------------------------------------------------------>
+
+<!-- GARIS PEMBATAS -->
+<hr class="section-divider">
+
+<!------------------------------------------------------------------------------------------------------------>
+
+
 <!--============================ contact me ================= -->
 
 <!-- send messege -->
@@ -503,9 +512,13 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
 <div class="toast toast-success" id="toastSuccess">
   ✅ Form berhasil dikirim!
 </div>
+<!------------------------------------------------------------------------------------------------------------>
+
+<!-- GARIS PEMBATAS -->
+<hr class="section-divider">
 
 
-
+<!------------------------------------------------------------------------------------------------------------>
 
 
 <!-- comntact -->
