--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
     <!-- CARD 1 -->
     <div class="project-card">
       <img src="image/project/LOGIN.png" alt="Project 1">
-      <h3>PENILAIAN SISWA BERBASIS WEB</h3>
+      <h3>WEBSITE PENILAIAN SISWA SMK N 1 GODEAN</h3>
       <p>
-        Sistem Informasi Berbasis WEB Siswa Untuk Penilaian Secara Digital Dari Guru menggunakan Username Dan Password Yang dimiliki masing-masing.
+        Sistem Informasi Berbasis WEB Siswa Untuk Penilaian siswa dari konnfesional ke digital       
       </p>
       <a href="https://github.com/imammularif/WEBSITE-PENILAIAN-SISWA-SMK-N-1-GODEAN" class="project-link">View Project →</a>
     </div>
@@ -409,7 +409,7 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
       <img src="image/project/dashboard.png" alt="Project 3">
       <h3>1000 Most Popular Youtube Vidios</h3>
       <p>
-        Dashboards Visualisasi Untuk Menampilkan Kategori Terpopuler Vidio Youtube Tahun 2024 baik dari jumlah view, likes, dislikes, & Presentase Jumlah Kategori vidios menggunakan Google Looker Studio
+        Visualisasi data yang berisi analisis 1000 video YouTube terpopuler pada tahun 2024       
       </p>
       <a href="https://github.com/imammularif/Most-popular-1000-Youtube-videos" class="project-link">View Project →</a>
     </div>
@@ -444,22 +444,22 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
 
     <!-- CARD 1 -->
     <div class="project-card">
-      <img src="image/sertif/2025/SQL.png" alt="Project 1">
-      <h3>HACKER RANK : SQL ADVANCED</h3>
-      <a href="#" class="project-link">View Certificate →</a>
+      <img src="image/sertif/2025/SV/1.png" alt="Cerif 1">
+      <h3>Skillvul : Algorithm & Data Structures with Python</h3>
+      <a href="certificate.html" class="project-link">View Certificate →</a>
     </div>
 
     <!-- CARD 2 -->
     <div class="project-card">
-      <img src="image/sertif/2025/SE.png" alt="Project 2">
+      <img src="image/sertif/2025/SE.png" alt="Certif 2">
       <h3>Coding Camp Mini Cource RevoU : Software Engineering</h3>
       <a href="certificate.html" class="project-link">View Certificate →</a>
     </div>
 
     <!-- CARD 3 -->
     <div class="project-card">
-      <img src="image/sertif/2023/MOS.png" alt="Project 3">
-      <h3>Microsoft Office Spesialist</h3>
+      <img src="image/sertif/2023/MOS.png" alt="Certif 3">
+      <h3>Microsoft Office Spesialist (MOS : WORD 2019)</h3>
       <a href="certificate.html" class="project-link">View Certificate →</a>
     </div>
 
