--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,8 @@
     <link rel="manifest" href="image/favicon_io/site.webmanifest">
 </head>
 <body>
-<div class="main-content">
+  
+<div class="main-content"> 
 
 <!-- NAVIGATION BAR -->
 <nav class="topnav">
@@ -77,8 +78,8 @@
 </section>
 
 
+<!-- close footer -->
 </div>
-
 
 <!-- /* =========================== FOOTER =========================== */ -->
 
