--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 
 
-
 <!-- ========================= NAVIGASI ============================= -->
 
 <nav class="topnav">
@@ -82,7 +81,7 @@
 </section>
 
 
-<!-- ========================= PEMBATAS/JUDUL ============================= -->
+<!------------------------------------------------------------------------------------------------------------>
 
 <!-- GARIS PEMBATAS -->
 <hr class="section-divider">
@@ -92,6 +91,8 @@
   <img src="image/validasi.webp" alt="logo" width="35">
   <h1 class="section-title">About</h1>
 </div>
+
+<!------------------------------------------------------------------------------------------------------------>
 
 
 <!-- ========================= CONTENT ============================= -->
@@ -282,8 +283,7 @@
 <!------------------------------------------------------------------------------------------------------------>
 
 
-
-<!-- ========================= EDUCATIONL ============================= -->
+<!-- ========================= EDUCATION ============================= -->
 
 <div class="timeline"> 
 
@@ -326,38 +326,39 @@
 
 <section class="experience-section">
 
-<div class="experience-list">
-<!-- ITEM 1 -->
-<div class="experience-card">
-<div class="exp-logo">
-<img src="image/PLN-Icon-Plus.png" alt="Company Logo">
-</div>
-<div class="exp-content">
-<h3>Junior Technical support</h3>
-<span class="exp-company">PLN Icon Plus</span>
-<span class="exp-date">Nov 2023 – Dec 2024 | South Jakarta</span>
-<p>
-Resolved 400+ tickets, ensured SLA >95%, optimized databases with SQL, automated workflows (-20% manual work), migrated 100+ users securely, and improved IT processes.
-</p>
-</div>
-</div>
+  <div class="experience-list">
 
-<div class="experience-list">
-<!-- ITEM 2 -->
-<div class="experience-card"> 
-<div class="exp-logo">
-<img src="image/PLN-Icon-Plus.png" alt="Company Logo">
-</div>
-<div class="exp-content">
-<h3>Data Visualization & Tableau Workshop</h3>
-<span class="exp-company">PLN Icon Plus</span>
-<span class="exp-date">Dec 2023 – Dec 2023 | South Jakarta</span>
-<p>
-Learned how to process data, create charts, build KPI metrics, and develop interactive dashboards using internal datasets.
-</p>
-</div>
-</div>
-</div>
+    <!-- ITEM 1 -->
+    <div class="experience-card">
+      <div class="exp-logo">
+        <img src="image/PLN-Icon-Plus.png" alt="Company Logo">
+      </div>
+      <div class="exp-content">
+        <h3>Junior Technical Support</h3>
+        <span class="exp-company">PLN Icon Plus</span>
+        <span class="exp-date">Nov 2023 – Dec 2024 | South Jakarta</span>
+        <p>
+          Resolved 400+ tickets, ensured SLA &gt;95%, optimized databases with SQL, automated workflows (-20% manual work), migrated 100+ users securely, and improved IT processes.
+        </p>
+      </div>
+    </div>
+
+    <!-- ITEM 2 -->
+    <div class="experience-card">
+      <div class="exp-logo">
+        <img src="image/PLN-Icon-Plus.png" alt="Company Logo">
+      </div>
+      <div class="exp-content">
+        <h3>Data Visualization & Tableau Workshop</h3>
+        <span class="exp-company">PLN Icon Plus</span>
+        <span class="exp-date">Dec 2023 – Dec 2023 | South Jakarta</span>
+        <p>
+          Learned how to process data, create charts, build KPI metrics, and develop interactive dashboards using internal datasets.
+        </p>
+      </div>
+    </div>
+
+  </div>
 
 </section>
 
@@ -417,8 +418,6 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
 <section class="single-btn-section fade-scroll">
   <a href="mini_project.html" class="single-btn">View All Project</a>
 </section>
-
-
 
 
 <!------------------------------------------------------------------------------------------------------------>
@@ -528,8 +527,6 @@ Learned how to process data, create charts, build KPI metrics, and develop inter
     <button onclick="closePopup()">OK</button>
   </div>
 </div>
-
-
 
 
 
