--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       <img src="image/project/LOGIN.png" alt="Project 1">
       <h3>WEBSITE PENILAIAN SISWA SMK N 1 GODEAN</h3>
       <p>
-        Sistem Informasi Berbasis WEB Siswa Untuk Penilaian siswa dari konnfesional ke digital       
+        Sistem Informasi Penilaian Siswa Berbasis Web sebagai Transformasi dari Sistem Konvensional ke Digital        
       </p>
       <a href="https://github.com/imammularif/WEBSITE-PENILAIAN-SISWA-SMK-N-1-GODEAN" class="project-link">View Project →</a>
     </div>
@@ -402,7 +402,7 @@
       <img src="image/project/ABSENSI.png" alt="Project 2">
       <h3>SMART ABSENSI FACE DETECTION USING LBPH</h3>
       <p>
-        Sistem Dengan Melakukan Deteksi Wajah Untuk Validasi data masuk otomati kedalam database absensi.
+        Sistem deteksi wajah untuk smart absensi menggunakan kamera komputer dengan algoritma LBPH berbasis Python.
       </p>
       <a href="https://github.com/imammularif/SMART-ABSENSI-WITH-FACE-RECOGNITION-LBPH-USING-PYTHON" class="project-link">View Project →</a>
     </div>
@@ -412,7 +412,7 @@
       <img src="image/project/dashboard.png" alt="Project 3">
       <h3>1000 Most Popular Youtube Vidios</h3>
       <p>
-        Visualisasi data yang berisi analisis 1000 video YouTube terpopuler pada tahun 2024       
+        Repositori ini berisi analisis komprehensif dari 1000 video YouTube terpopuler secara global. Tujuan dari proyek ini adalah untuk memahami tren dalam kategori video, metrik keterlibatan, dan preferensi pemirsa global.       
       </p>
       <a href="https://github.com/imammularif/Most-popular-1000-Youtube-videos" class="project-link">View Project →</a>
     </div>
