--- a/mini_project.html
+++ b/mini_project.html
@@ -81,7 +81,7 @@
         <span class="project-tech">HTML • CSS • JavaScript • JDN</span>
 
         <div class="project-links">
-          <a href="https://imammularif.github.io/My-Portofolio-Website/"
+          <a href="https://imammularif.github.io/My-Portofolio/"
              class="project-link"
              target="_blank">
             View Project →
@@ -107,7 +107,7 @@
       <div class="project-content">
         <h2>WEBSITE PENILAIAN SISWA SMK N 1 GODEAN</h2>
         <p>
-          Sistem Informasi Berbasis WEB Siswa Untuk Penilaian siswa dari konnfesional ke digital
+          Sistem Informasi Penilaian Siswa Berbasis Web sebagai Transformasi dari Sistem Konvensional ke Digital
         </p>
 
         <span class="project-tech">MySQL • XAMPP • PHP • HTML • CSS • Databases • Kerja Praktek</span>
@@ -203,7 +203,8 @@
       <div class="project-content">
         <h2>DOCUMENTASI UBUNTU POSTGRESQL</h2>
         <p>
-          Instalasi, konfigurasi, dan manajemen PostgreSQL di Ubuntu
+          Repositori ini berisi dokumentasi lengkap seputar instalasi, konfigurasi, dan manajemen PostgreSQL di sistem operasi Ubuntu.
+          Setiap folder mewakili topik yang berbeda — mulai dari setup awal, pengelolaan user &privilege, hingga praktik CRUD dan backup-restore database
         </p>
 
         <span class="project-tech">PostgreSQL • Linux • DataManagement • ManagementAccessControl</span>
@@ -230,7 +231,8 @@
       <div class="project-content">
         <h2>Basic SQL</h2>
         <p>
-          Perintah dasar SQL serta menerapkan operasi umum seperti CREATE, INSERT, SELECT, dan kueri sederhana
+          Repositori ini dibuat untuk mempelajari dan mempraktikkan perintah dasar SQL.
+          Tujuannya adalah untuk memahami dan menerapkan operasi SQL umum seperti CREATE, INSERT, SELECT, dan kueri sederhana untuk analisis data.
         </p>
 
         <span class="project-tech">SQL • DBeaver • MySQL • DataAnalysis</span>
@@ -257,7 +259,8 @@
       <div class="project-content">
         <h2>Most popular 1000 Youtube videos</h2>
         <p>
-          Visualisasi data yang berisi analisis 1000 video YouTube terpopuler pada tahun 2024
+          Repositori ini berisi analisis komprehensif dari 1000 video YouTube terpopuler secara global.
+          Tujuan dari proyek ini adalah untuk memahami tren dalam kategori video, metrik keterlibatan, dan preferensi pemirsa global.
         </p>
 
         <span class="project-tech">Visualisasi • LookerStudio • SQL</span>
