--- a/cv.html
+++ b/cv.html
@@ -66,7 +66,7 @@
     <div class="cv-item latest">
       <span class="cv-tag">Latest</span>
       <span class="cv-text">CV Terbaru</span>
-      <a href="document/2025/INDO/CV_IMAMMUL ARIF.pdf" target="_blank">Open</a>
+      <a href="document/2025/INDO/CV IMAMMUL ARIF.pdf" target="_blank">Open</a>
     </div>
 
     <div class="cv-item old">
