--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <!-- CTA Buttons -->
       <div class="cta-buttons">
-        <a href="document/2025/INDO/CV_IMAMMUL ARIF.pdf" target="_blank" class="btn btn-cv" download>Download CV</a>
+        <a href="document/2025/INDO/CV IMAMMUL ARIF.pdf" target="_blank" class="btn btn-cv" download>Download CV</a>
         <a href="#contact" class="btn btn-connect">Let's Connect</a>
       </div>
 
