--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     </div>
 
     <!-- ITEM 2 -->
-    <div class="experience-card">
+    <!-- <div class="experience-card">
       <div class="exp-logo">
         <img src="image/PLN-Icon-Plus.png" alt="Company Logo">
       </div>
@@ -363,7 +363,7 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
 
 </section>
 
