--- a/mini_project.html
+++ b/mini_project.html
@@ -73,7 +73,7 @@
       </div>
 
       <div class="project-content">
-        <h2>My-Portofolio-Website</h2>
+        <h2>My-Portofolio-Website (2025)</h2>
         <p>
           Web Development Portofolio Pribadi Berbasis Web (DEMO)
         </p>
@@ -105,7 +105,7 @@
       </div>
 
       <div class="project-content">
-        <h2>WEBSITE PENILAIAN SISWA SMK N 1 GODEAN</h2>
+        <h2>WEBSITE PENILAIAN SISWA SMK N 1 GODEAN (2022)</h2>
         <p>
           Sistem Informasi Penilaian Siswa Berbasis Web sebagai Transformasi dari Sistem Konvensional ke Digital
         </p>
@@ -132,7 +132,7 @@
       </div>
 
       <div class="project-content">
-        <h2>TO DO LIST</h2>
+        <h2>TO DO LIST (2025)</h2>
         <p>
           Mini-Project Tugas Capstone Dari Mini-Course/Coding Camp Dari RevoU : Software Enggineering
         </p>
@@ -164,7 +164,7 @@
       </div>
 
       <div class="project-content">
-        <h2>Pokemon</h2>
+        <h2>Pokemon (2025)</h2>
         <p>
           Base Project dari Skillvull membuat website menggunakan React
         </p>
@@ -201,7 +201,7 @@
       </div>
 
       <div class="project-content">
-        <h2>DOCUMENTASI UBUNTU POSTGRESQL</h2>
+        <h2>DOCUMENTASI UBUNTU POSTGRESQL (2025)</h2>
         <p>
           Repositori ini berisi dokumentasi lengkap seputar instalasi, konfigurasi, dan manajemen PostgreSQL di sistem operasi Ubuntu.
           Setiap folder mewakili topik yang berbeda — mulai dari setup awal, pengelolaan user &privilege, hingga praktik CRUD dan backup-restore database
@@ -229,7 +229,7 @@
       </div>
 
       <div class="project-content">
-        <h2>Basic SQL</h2>
+        <h2>Basic SQL (2025)</h2>
         <p>
           Repositori ini dibuat untuk mempelajari dan mempraktikkan perintah dasar SQL.
           Tujuannya adalah untuk memahami dan menerapkan operasi SQL umum seperti CREATE, INSERT, SELECT, dan kueri sederhana untuk analisis data.
@@ -257,7 +257,7 @@
       </div>
 
       <div class="project-content">
-        <h2>Most popular 1000 Youtube videos</h2>
+        <h2>Most popular 1000 Youtube videos (2025)</h2>
         <p>
           Repositori ini berisi analisis komprehensif dari 1000 video YouTube terpopuler secara global.
           Tujuan dari proyek ini adalah untuk memahami tren dalam kategori video, metrik keterlibatan, dan preferensi pemirsa global.
@@ -300,7 +300,7 @@
       </div>
 
       <div class="project-content">
-        <h2>Sistem Smart Absensi Wajah Menggunakan Metode LBPH</h2>
+        <h2>Sistem Smart Absensi Wajah Menggunakan Metode LBPH (2023)</h2>
         <p>
           Sistem deteksi wajah untuk smart absensi menggunakan kamera komputer dengan algoritma LBPH berbasis Python.
         </p>
@@ -327,7 +327,7 @@
       </div>
 
       <div class="project-content">
-        <h2>DATA SCIENCE WITH PYTHON</h2>
+        <h2>DATA SCIENCE WITH PYTHON (2025)</h2>
         <p>
           Mengolah dan menganalisis data untuk mendapatkan wawasan, mendukung keputusan bisnis, dan membuat aplikasi AI/ML.
         </p>
